--- a/i18n.properties
+++ b/i18n.properties
@@ -93,9 +93,9 @@ NoBackgroundText = You can't run the selected report in the wizard. Please click
 #XTXT: Run front end report button text
 RunFrontendReportButton = Run report
 #XTXT: Format step title
-FormatStepTitle = Format
+FormatStepTitle = Output formats
 #XTXT: Select variant text
-SelectFormatText = Select a standard country format available for
+SelectFormatText = Available standard country format  for
 #XTXT: File Extension text
 FileExtension = Additional file will be generated with extension
 #XTXT: Output step title
@@ -129,8 +129,13 @@ AutoRefresh = Auto Refresh
 #XTXT: Text for the refreshing button
 Refreshing = Refreshing...
 #XTXT: Text for msg related to format
-FormatMsg = Standard country format(s) available for selected report
-
+FormatMsg = Standard country format(s) available for
+#XTXT: Text for file format
+FileFormat = Report file format: {0}
+#XTXT: Text for log format
+LogFormat = Log file format:
+#XTXT: Text for log format
+LogFormatReview = Log file format: {0}
 
 #----- REVIEW PAGE -----
 #XFLD: Edit
@@ -220,3 +225,7 @@ VariantDeleted = Variant deleted succcessfully
 ExecuteVariant = Are you sure you want to execute the selected wizard variant?
 #XTXT: Execute msg
 VariantExecuted = Variant executed succcessfully
+#XTXT: Delete
+Delete = Delete
+#XTXT: Execute
+Execute = Execute
